#Did a lot but actually nothing:
- add arabic as language
- add turkey as language
- language engine rework
- flag rework + 3way language names
- cost savings picture rework
- free trade map fix
- cost savings head fix
- side nav button rework
- added footer logo

#Good Job - it's great.

--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
 
         <div class="flex flex-col" id="costSavingsEn">
             <h1 class="text-4xl text-font-business ml-10 mid-size-mx lg:ml-0 block">Cost Savings</h1>
-            <p class="text-3xl lg:text-2xl mt-10 mx-10 block">
+            <p class="text-3xl lg:text-2xl mt-10 block">
                 According to EUROSTAT, Serbia has the lowest costs of electricity, gas, other
                 fuels and landline telephony among 37 European states.
             </p>
@@ -578,7 +578,7 @@
                     </div>
                 </div>
             </div>
-            <p class="text-3xl lg:text-2xl mt-10 mx-10 block" id="costSave2En">
+            <p class="text-3xl lg:text-2xl mt-10 block" id="costSave2En">
                 KOJAMI is your entry-ticket to all these benefits.
                 As a partner of management, we advise our customers from strategy development to pragmatic
                 implementation.
@@ -586,7 +586,7 @@
         </div>
         <div class="flex flex-col hidden" id="costSavingsDe">
             <h1 class="text-4xl text-font-business ml-10 mid-size-mx lg:ml-0 block">Kostensenkung</h1>
-            <p class="text-3xl lg:text-2xl mt-10 block mx-10">
+            <p class="text-3xl lg:text-2xl mt-10 block">
                 Laut EUROSTAT hat Serbien unter 37 europäischen Staaten die niedrigsten Kosten für
                 Strom, Gas und andere Brennstoffe, sowie Telefonie.
             </p>
@@ -652,14 +652,14 @@
                     </div>
                 </div>
             </div>
-            <p class="text-3xl mt-10 lg:text-2xl mt-6 block mx-10">
+            <p class="text-3xl mt-10 lg:text-2xl mt-6 block">
                 KOJAMI ist Ihr Eintrittsticket zu all diesen Vorteilen.
                 Als Partner des Managements beraten wir unsere Kunden von der Strategieentwicklung bis zur pragmatischen Umsetzung.
             </p>
         </div>
         <div class="flex flex-col hidden" id="costSavingsCn">
             <h1 class="text-4xl text-font-business ml-10 mid-size-mx lg:ml-0 block">降低成本</h1>
-            <p class="text-3xl lg:text-2xl mt-10 block mx-10">
+            <p class="text-3xl lg:text-2xl mt-10 block">
                 根据欧统局的数据，塞尔维亚是37个欧洲国家中电力、天然气和其他燃料以及电话费用最低的国家。
             </p>
             <div class="flex flex-col mt-10 mr-10">
@@ -724,13 +724,13 @@
                     </div>
                 </div>
             </div>
-            <p class="text-3xl mt-10 lg:text-2xl mt-6 block mx-10">
+            <p class="text-3xl mt-10 lg:text-2xl mt-6 block">
                 KOJAMI是您获得所有这些好处的门票。 作为管理层的合作伙伴，我们为客户提供从战略制定到实际执行的建议。
             </p>
         </div>
         <div class="flex flex-col hidden" id="costSavingsRu">
             <h1 class="text-4xl text-font-business ml-10 mid-size-mx lg:ml-0 block">Экономия затрат </h1>
-            <p class="text-3xl lg:text-2xl mt-10 block mx-10">
+            <p class="text-3xl lg:text-2xl mt-10 block">
                 По данным Евростата, Сербия имеет самые низкие среди 37 европейских государств цены на электричество, газ, другие виды топлива и стационарную телефонную связь.
             </p>
             <div class="flex flex-col mt-10 mr-10">
@@ -795,14 +795,14 @@
                     </div>
                 </div>
             </div>
-            <p class="text-3xl mt-10 lg:text-2xl mt-6 block mx-10">
+            <p class="text-3xl mt-10 lg:text-2xl mt-6 block">
                 KOJAMI - это Ваш входной билет на все эти преимущества.
                 Как партнер по управлению, мы консультируем наших клиентов от разработки стратегии до ее прагматического внедрения.
             </p>
         </div>
         <div class="flex flex-col hidden" id="costSavingsRs">
             <h1 class="text-4xl text-font-business ml-10 mid-size-mx lg:ml-0 block">Уштеда трошкова</h1>
-            <p class="text-3xl lg:text-2xl mt-10 mx-10 block">
+            <p class="text-3xl lg:text-2xl mt-10 block">
                 Према подацима Еуростата, Србија има најниже цене међу
                 37 европских земаља за електричну енергију, гас, друга горива и телефонију.
             </p>
@@ -868,13 +868,13 @@
                     </div>
                 </div>
             </div>
-            <p class="text-3xl mt-10 lg:text-2xl mt-6 mx-10 block">
+            <p class="text-3xl mt-10 lg:text-2xl mt-6 block">
                 КОЈАМИ је ваша улазница за све ове погодности. Као менаџерски партнер, саветујемо наше клијенте од развоја стратегије до прагматичне примене.
             </p>
         </div>
         <div class="flex flex-col hidden" id="costSavingsIr">
             <h1 class="text-4xl text-font-business ml-10 mid-size-mx lg:ml-0 block text-right">صرفه جویی در هزینه ها</h1>
-            <p class="text-3xl lg:text-2xl mt-10 text-right mx-10 block">
+            <p class="text-3xl lg:text-2xl mt-10 text-right block">
                 براساس EUROSTAT ، صربستان در میان 37 منطقه ی اروپایی کمترین هزینه های برق ، گاز ، سوخت ، تلفن ثابت  و سایر
             </p>
             <div class="flex flex-col mt-10 mr-10">
@@ -939,13 +939,13 @@
                     </div>
                 </div>
             </div>
-            <p class="text-3xl mt-10 lg:text-2xl mt-6 block mx-10 text-right">
+            <p class="text-3xl mt-10 lg:text-2xl mt-6 block text-right">
                 موارد را داردKOJAMI بلیط ورود شما به کلیه این مزایا است. ما به عنوان یک شریک مدیریتی ، از توسعه استراتژی تا اجرای عملی به مشتریان خود مشاوره می دهیم.
             </p>
         </div>
         <div class="flex flex-col hidden" id="costSavingsTr">
             <h1 class="text-4xl text-font-business ml-10 mid-size-mx lg:ml-0 block">Cost Savings</h1>
-            <p class="text-3xl lg:text-2xl mt-10 mx-10 block">
+            <p class="text-3xl lg:text-2xl mt-10 block">
                 EUROSTAT'a göre Sırbistan, 37 Avrupa ülkesi arasında ücret, elektrik, gaz ve diğer yakıtların yanı sıra telefon için en düşük maliyete sahip ülke.
             </p>
             <div class="flex flex-col mt-10 mr-10">
@@ -1010,13 +1010,13 @@
                     </div>
                 </div>
             </div>
-            <p class="text-3xl lg:text-2xl mt-10 mx-10 block">
+            <p class="text-3xl lg:text-2xl mt-10 block">
                 KOJAMI, tüm bu avantajlara giriş biletinizdir. Bir yönetim ortağı olarak müşterilerimize strateji geliştirmeden pragmatik uygulamaya kadar her konuda tavsiyelerde bulunuyoruz.
             </p>
         </div>
         <div class="flex flex-col hidden" id="costSavingsAr">
             <h1 class="text-4xl text-right text-font-business ml-10 mid-size-mx lg:ml-0 block">خفض التكاليف</h1>
-            <p class="text-3xl text-right lg:text-2xl mt-10 mx-10 block">
+            <p class="text-3xl text-right lg:text-2xl mt-10 block">
                 وفقًا لـ
                 EUROSTAT
                 تمتلك صربيا أقل تكلفة للعمالة والكهرباء والغاز وأنواع الوقود الأخرى بالإضافة إلى الاتصالات الهاتفية بين 37 دولة أوروبية.
@@ -1083,7 +1083,7 @@
                     </div>
                 </div>
             </div>
-            <p class="text-3xl text-right lg:text-2xl mt-10 mx-10 block">
+            <p class="text-3xl text-right lg:text-2xl mt-10 block">
                 KOJAMI
                 . هي تذكرة دخولك إلى كل هذه المزايا
                 بصفتنا شريكًا إداريًا ، فإننا ننصح عملائنا في كل شيء بدءًا من تطوير الإستراتيجية إلى التنفيذ العملي.
