--- a/imprint/index.html
+++ b/imprint/index.html
@@ -193,19 +193,19 @@
                 </div>
                 <div class="flex flex-col w-1/3 text-2xl lg:text-base block" id="footerEn">
                     <div class="text-center offerBox">
-                        <a href="#" class="" id="imprint1"></a>
+                        <a href="imprint" class="" id="imprint1"></a>
                     </div>
                     <div class="text-center mt-2 offerBox">
-                        <a href="#" class="" id="imprint2"></a>
+                        <a href="privacy-policy" class="" id="imprint2"></a>
                     </div>
                     <div class="mt-12 offerBox cursor-pointer">
-                        <img class="w-1/4 mx-auto" src="../img/svg/vektor-logo-white.svg">
+                        <img class="w-1/4 mx-auto" src="img/svg/vektor-logo-white.svg">
                     </div>
                 </div>
                 <div class="flex w-1/3 flex-col">
                     <p class="mx-auto text-2xl lg:text-base text-center">made by</p>
                     <div class="mx-auto w-1/3">
-                        <img src="../img/svg/XXX.svg" class="cursor-pointer offerBox mx-auto">
+                        <img src="img/svg/XXX.svg" class="cursor-pointer offerBox mx-auto">
                     </div>
                 </div>
             </div>
