#Did a lot but actually nothing:
- flag fix

#Good Job - it's great.

--- a/index.html
+++ b/index.html
@@ -151,52 +151,52 @@
         <div class="flex w-1/4 lg:w-1/12 cursor-pointer mr-10">
             <div class="hidden flex-col justify-center text-center text-3xl lg:text-lg font-semibold w-full pb-2 text-font-business bg-white shadow-lg" onmouseenter="toggleLangs()" onmouseleave="toggleLangs()" id="langBox">
                 <div class="flex navBarElement justify-between" onclick="trans('en')">
-                    <div class="w-1/5 ml-2 ">
+                    <div class="ml-2 lg:ml-3 mr-1">
                         <img src="img/flags/united-states.svg" class="flag">
                     </div>
-                    <p class="text-center mr-6">ENG</p>
+                    <p class="text-center mr-2 lg:mr-3 xl:mr-8">ENG</p>
                 </div>
                 <div class="flex navBarElement justify-between" onclick="trans('de')">
-                    <div class="w-1/5 ml-2 ">
+                    <div class="ml-2 lg:ml-3 mr-1">
                         <img src="img/flags/germany.svg" class="flag">
                     </div>
-                    <p class="text-center mr-6">GER</p>
+                    <p class="text-center mr-2 lg:mr-3 xl:mr-8">GER</p>
                 </div>
                 <div class="flex navBarElement justify-between" onclick="trans('cn')">
-                    <div class="w-1/5 ml-2 ">
+                    <div class="ml-2 lg:ml-3 mr-1">
                         <img src="img/flags/china.svg" class="flag">
                     </div>
-                    <p class="text-center mr-6">CHN</p>
+                    <p class="text-center mr-2 lg:mr-3 xl:mr-8">CHN</p>
                 </div>
                 <div class="flex navBarElement justify-between" onclick="trans('rs')">
-                    <div class="w-1/5 ml-2 ">
+                    <div class="ml-2 lg:ml-3 mr-1">
                         <img src="img/flags/serbia.svg" class="flag">
                     </div>
-                    <p class="text-center mr-6">SRB</p>
+                    <p class="text-center mr-2 lg:mr-3 xl:mr-8">SRB</p>
                 </div>
                 <div class="flex navBarElement justify-between" onclick="trans('ru')">
-                    <div class="w-1/5 ml-2 ">
+                    <div class="ml-2 lg:ml-3 mr-1">
                         <img src="img/flags/russia.svg" class="flag">
                     </div>
-                    <p class="text-center mr-6">RUS</p>
+                    <p class="text-center mr-2 lg:mr-3 xl:mr-8">RUS</p>
                 </div>
                 <div class="flex navBarElement justify-between" onclick="trans('ir')">
-                    <div class="w-1/5 ml-2 ">
+                    <div class="ml-2 lg:ml-3 mr-1">
                         <img src="img/flags/iran.svg" class="flag">
                     </div>
-                    <p class="text-center mr-6">IRN</p>
+                    <p class="text-center mr-2 lg:mr-3 xl:mr-8">IRN</p>
                 </div>
                 <div class="flex navBarElement justify-between" onclick="trans('tr')">
-                    <div class="w-1/5 ml-2 ">
+                    <div class="ml-2 lg:ml-3 mr-1">
                         <img src="img/flags/turkey.svg" class="flag">
                     </div>
-                    <p class="text-center mr-6">TUR</p>
+                    <p class="text-center mr-2 lg:mr-3 xl:mr-8">TUR</p>
                 </div>
                 <div class="flex navBarElement justify-between" onclick="trans('ar')">
-                    <div class="w-1/5 ml-2">
+                    <div class="ml-2 lg:ml-3 mr-1">
                         <img src="img/flags/arabia.svg" class="flag">
                     </div>
-                    <p class="text-center mr-6">ARA</p>
+                    <p class="text-center mr-2 lg:mr-3 xl:mr-8">ARA</p>
                 </div>
             </div>
         </div>
