#Did a lot but actually nothing:
- changed main.js to imprint.js @imprint

#Good Job - it's great.

--- a/imprint/index.html
+++ b/imprint/index.html
@@ -11,11 +11,7 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="msapplication-config" content="/favicon/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
-    <script src="../js/jQuery-3.4.1.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="../css/slick.css"/>
-    <script type="text/javascript" src="../js/slick.min.js"></script>
-    <script type="text/javascript" src="../js/main.js"></script>
-    <script type="text/javascript" src="../js/language.js"></script>
+    <script type="text/javascript" src="../js/imprint.js"></script>
     <link href="../css/tailwind.css" rel="stylesheet">
     <link href="../css/main.css" rel="stylesheet">
     <title>KOJAMI - International Consulting</title>
